welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:6: error: missing arguments for method || in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
  if (A==b|| A=c||B==a||B==c){
          ^lessBy10:6: error: value || is not a member of Int
  if (A==b|| A=c||B==a||B==c){
                ^lessBy10:7: error: type mismatch;
 found   : Unit
 required: Boolean
    return
    ^lessBy10:6: error: type mismatch;
 found   : Unit
 required: Boolean
  if (A==b|| A=c||B==a||B==c){
  ^